--- a/src/ListenTogether/Pages/DiscoverPage.xaml
+++ b/src/ListenTogether/Pages/DiscoverPage.xaml
@@ -103,34 +103,75 @@
             <Border
                 BackgroundColor="Transparent"
                 StrokeThickness="0">
-                <FlexLayout
-                    Direction="Row"
-                    Wrap="Wrap"
-                    AlignContent="Start"
-                    BindableLayout.ItemsSource="{Binding SongMenus}">
-                    <BindableLayout.ItemTemplate>
-                        <DataTemplate>
-                            <hc:HandCursorStackLayout
-                                Margin="10,0,10,0"
-                                Spacing="10"
-                                WidthRequest="140"
-                                HeightRequest="200"
-                                ToolTipProperties.Text="{Binding Name}">
-                                <hc:HandCursorStackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:DiscoverPageViewModel}}, Path=GotoSongMenuPageAsyncCommand}"
-                                        CommandParameter="{Binding .}"/>
-                                </hc:HandCursorStackLayout.GestureRecognizers>
-                                <Image
-                                    Source="{Binding ImageUrl}"/>
-                                <Label
-                                    Text="{Binding Name}"
-                                    Style="{StaticResource Explain}"
-                                    LineBreakMode="TailTruncation"/>
-                            </hc:HandCursorStackLayout>
-                        </DataTemplate>
-                    </BindableLayout.ItemTemplate>
-                </FlexLayout>
+                <OnPlatform x:TypeArguments="View">
+                    <On Platform="WinUI, macOS">
+                        <FlexLayout
+                            Direction="Row"
+                            Wrap="Wrap"
+                            AlignContent="Start"
+                            BindableLayout.ItemsSource="{Binding SongMenus}">
+                            <BindableLayout.ItemTemplate>
+                                <DataTemplate>
+                                    <hc:HandCursorStackLayout
+                                        Margin="10,5,10,5"
+                                        Spacing="5"
+                                        WidthRequest="140"
+                                        HeightRequest="200"
+                                        ToolTipProperties.Text="{Binding Name}">
+                                        <hc:HandCursorStackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer
+                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:DiscoverPageViewModel}}, Path=GotoSongMenuPageAsyncCommand}"
+                                                CommandParameter="{Binding .}"/>
+                                        </hc:HandCursorStackLayout.GestureRecognizers>
+                                        <Border
+                                            StrokeThickness="0.1"
+                                            StrokeShape="RoundRectangle 10">
+                                            <Image
+                                                Aspect="AspectFill"
+                                                Source="{Binding ImageUrl}"/>
+                                        </Border>
+                                        <Label
+                                            Text="{Binding Name}"
+                                            Style="{StaticResource Explain}"
+                                            LineBreakMode="WordWrap"/>
+                                    </hc:HandCursorStackLayout>
+                                </DataTemplate>
+                            </BindableLayout.ItemTemplate>
+                        </FlexLayout>
+                    </On>
+                    <On Platform="Android,iOS">
+                        <CollectionView ItemsSource="{Binding SongMenus}"
+                                        ItemsLayout="VerticalGrid, 3">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid
+                                        Padding="10"
+                                        RowSpacing="5"
+                                        RowDefinitions="Auto,Auto">
+                                        <Grid.GestureRecognizers>
+                                            <TapGestureRecognizer
+                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:DiscoverPageViewModel}}, Path=GotoSongMenuPageAsyncCommand}"
+                                                CommandParameter="{Binding .}"/>
+                                        </Grid.GestureRecognizers>
+                                        <Border
+                                            Grid.Row="0"
+                                            StrokeThickness="0.1"
+                                            StrokeShape="RoundRectangle 10">
+                                            <Image
+                                                Aspect="AspectFill"
+                                                Source="{Binding ImageUrl}"/>
+                                        </Border>
+                                        <Label
+                                            Grid.Row="1"
+                                            Text="{Binding Name}"
+                                            Style="{StaticResource Explain}"
+                                            LineBreakMode="WordWrap"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </On>
+                </OnPlatform>
             </Border>
         </ScrollView>
 
