--- a/src/ListenTogether/Controls/MusicResultView.xaml
+++ b/src/ListenTogether/Controls/MusicResultView.xaml
@@ -116,6 +116,7 @@
                                 Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="0"
+                                Style="{StaticResource Explain}"
                                 Text="{Binding Seq}"
                                 HorizontalTextAlignment="Start"
                                 VerticalTextAlignment="Center"/>
